--- a/_jekyll/index.html
+++ b/_jekyll/index.html
@@ -18,6 +18,14 @@ title: Welcome Home
 
     <hr />
 
+    <h2 class="section">Products</h2>
+
+    {% for product in site.products %}
+      <h3><a href="{{ product.url }}">{{ product.title }}</a></h3>
+
+      <p>{{ product.content }}</p>
+    {% endfor %}
+
     <h2>Testing</h2>
 
     {% pagecomponent panels/breakout title="I am a Title!" center=true %}
