All kinds of new awesome store stuff

--- a/_jekyll/404.html
+++ b/_jekyll/404.html
@@ -1,7 +1,9 @@
 ---
 layout: page
-title: 404
+title: Page Not Found
 permalink: /404.html
 ---
 
-<p>Nothing to see here...</p>
+<p>Hmm, seems like that link isn't working.</p>
+
+<p>Click the logo above to see what else is around.</p>
