--- a/_jekyll/world-flutes.html
+++ b/_jekyll/world-flutes.html
@@ -4,15 +4,7 @@ layout: product_line
 product_category: world-flutes
 special_boxes: true
 custom_ordering: |
-  Bansuri
-
-  _$9999-$10000000_
-
-  Rim Blown Flutes
-
-  _etc._
-
-  Some more info about putting in a custom order.
+  Shakuhachi price: **$425**
 ---
 
 <div class="row medium-up-2 large-up-2 fade-on-load">
