--- a/_jekyll/404.html
+++ b/_jekyll/404.html
@@ -1,9 +1,11 @@
 ---
 layout: page
 title: Page Not Found
-permalink: /404.html
+subtitle: ''
+extra_page_class: ''
+permalink: "/404.html"
 ---
 
 <p>Hmm, seems like that link isn't working.</p>
 
-<p>Click the logo above to see what else is around.</p>
+<p>Try clicking on the logo above to see what else is around.</p>
