--- a/_jekyll/world-flutes.html
+++ b/_jekyll/world-flutes.html
@@ -1,9 +1,10 @@
 ---
-title: World Flutes
 layout: product_line
+title: World Flutes
+subtitle: ''
+extra_page_class: ''
+custom_ordering: ''
 special_boxes: true
-custom_ordering: |
-  Shakuhachi price: **$425**
 ---
 
 <div class="row medium-up-2 large-up-2 fade-on-load">
