Show out of stock products on index

--- a/src/products.html
+++ b/src/products.html
@@ -10,7 +10,7 @@ extra_page_class: ' page product'
 </header>
 
 <div id="products-list" class="fade-on-load">
-  {% assign products = site.products | where: "out_of_stock", false | sort: 'title' | sort: 'categories' %}
+  {% assign products = site.products | sort: 'title' | sort: 'categories' %}
 
   {% if products.size > 0 %}
     <div class="row" style="max-width:1100px">
