Rename to Store

--- a/src/products.html
+++ b/src/products.html
@@ -1,12 +1,12 @@
 ---
-title: Products in Stock
+title: Store
 lang: en
 layout: default
 extra_page_class: ' page product'
 ---
 
 <header id="page-title">
-  <h1 class="text-center">Products in Stock</h1>
+  <h1 class="text-center">Store</h1>
 </header>
 
 <div id="products-list" class="fade-on-load">
