Improved messaging around the front page store links, store links to newsletter or custom order

--- a/src/products.html
+++ b/src/products.html
@@ -37,9 +37,8 @@ extra_page_class: " page product"
     </section>
 	
 	  <section class="row">
-      <div id="content" class="medium-8 medium-offset-2 columns">
+      <div id="content" class="medium-8 medium-offset-2 columns" style="padding-top:0; background:none">
         <p class="text-center">Can't find what you're looking for? <a href="#" onclick="$('footer input[name=\'cm-name\']').focus();return false">Sign up for the Geoffrey Ellis Flutes mailing list</a> to get notified when stock is added to the online store. Or <a href="/custom-order/">place a custom order</a> to receive a one-of-a-kind instrument made just for you.</p>
-				<br/><br/>
 		  </div>
 	  </section>
 
