--- a/src/_ja_archived/products.html
+++ b/src/_ja_archived/products.html
@@ -37,7 +37,7 @@ extra_page_class: ' page product'
 
     {% for product in products %}
       <!-- SKU: {{ product.slug }} -->
-      {% include product.html %}
+      {% render "product", site: site, product: product %}
     {% endfor %}
   {% else %}
     <section class="row">
