--- a/src/world-flutes.html
+++ b/src/world-flutes.html
@@ -11,18 +11,20 @@ special_boxes: true
 <div class="row medium-up-2 large-up-2 fade-on-load">
   {% assign world_flutes = site.world_flutes %}
   {% for flute in world_flutes %}
-    <div class="column column-block">
-      <div class="blue content-box" markdown="1">
-        <h3><a href="{{ flute.url }}" class="no-border">{{ flute.title | smartify }}</a></h3>
+    {% unless flute.hide_from_indexes %}
+      <div class="column column-block">
+        <div class="blue content-box" markdown="1">
+          <h3><a href="{{ flute.url }}" class="no-border">{{ flute.title | smartify }}</a></h3>
 
-        <a href="{{ flute.url }}"><div class="full-width flute-image" style="{% if flute.url contains 'transverse-folk' %}background-position: center top;{% endif %}background-image: url({{ flute.cloudinary_id | cloudinary_url:'a_exif,c_limit,h_4000,q_75,w_2048' }})"></div></a>
+          <a href="{{ flute.url }}"><div class="full-width flute-image" style="{% if flute.url contains 'transverse-folk' %}background-position: center top;{% endif %}background-image: url({{ flute.cloudinary_id | cloudinary_url:'a_exif,c_limit,h_4000,q_75,w_2048' }})"></div></a>
 
-        <div style="min-height:5rem">
-          <p>{{ flute.subtitle | smartify }}</p>
+          <div style="min-height:5rem">
+            <p>{{ flute.subtitle | smartify }}</p>
+          </div>
+
+          <p class="text-center"><a href="{{ flute.url }}" class="button hollow white">Learn More</a></p>
         </div>
-
-        <p class="text-center"><a href="{{ flute.url }}" class="button hollow white">Learn More</a></p>
       </div>
-    </div>
+    {% endunless %}
   {% endfor %}
 </div>
